--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,14 @@ dependencies:
   cloud_firestore: ^3.1.8
   firebase_messaging: ^11.2.6
   firebase_core: ^1.13.1
+  firebase_dynamic_links: 2.0.6
+
 
   bloc: ^8.0.2
   flutter_bloc: ^8.0.1
   cached_network_image: ^3.2.0
   shared_preferences: ^2.0.12
+  share: ^2.0.4
 
 
 
