--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.studentguide.anonymous">
    <application
-        android:label="anonymous"
+        android:label="Anonymous Chat"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
