--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,9 +77,11 @@ flutter:
   uses-material-design: true
 
 
+  assets:
+     - images/
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+#   assets:
+#     - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
